# cncpp26-personal

./: .gitignore  CMakeLists.txt  README.md  cncpp.code-workspace  director.toml  machine.json  machine.toml  mads.ini
Python/: CMakeLists.txt  README.md  cncpp.ipynb  machine_control.ipynb  pyproject.toml
Python/cncpp/: __init__.py
Python/src/: cncpp_python.cpp
R/: .gitignore  DESCRIPTION  NAMESPACE  README.qmd  README.rmd  configure
R/R/: RcppExports.R  cncpp.R
R/man/: Block.Rd  Machine.Rd  Point.Rd  Program.Rd
R/src/: Makevars.win  RcppExports.cpp  cncpp_kernel.cpp  cncpp_wrappers.cpp
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/examples_1/: test.cpp
examples/examples_2/: test.cpp
examples/examples_3_AI/: Doxyfile  STYLE.md  TASK.md  Vector2D.cpp  Vector2D.h  example_3.cpp  test_Vector2D.cpp
examples/examples_4/: example_4.cpp
examples/examples_5/: Circle.cpp  Circle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  demo_smart_pointers.cpp  demo_smart_pointers.h  example_5.cpp
examples/examples_6/: example_6.cpp  forced_spring.cpp  forced_spring.h  model.cpp  model.h  spring.cpp  spring.h  types.h
examples/examples_6/configs/: spring.txt
examples/try_it_yourself/: main.cpp  vector2D.cpp  vector2D.h
src/: block.cpp  block.hpp  cncpp.hpp  defines.hpp  fsm.dot  fsm.hpp  fsm_impl.hpp  machine.cpp  machine.hpp  point.cpp  point.hpp  program.cpp  program.hpp
src/main/: cnc.cpp
tests/: CMakeLists.txt  block_unit_tests.cpp  point_unit_tests.cpp
